--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>{{ page.title }}</title>
   {%- seo title=true -%}
-
-  {%- if site.listen_for_clients_preferred_style -%}
     <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
-  {%- else -%}
     {%- if site.style == 'light' -%}
      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-light.css" | relative_url }}">
-   {%- else -%}
-      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-dark.css" | relative_url }}">
     {%- endif -%}
-  {%- endif -%}
+    {%- if site.style == 'dark' -%}
+     <link rel="stylesheet" type="text/css" href="{{ "/assets/main-dark.css" | relative_url }}">
+    {%- endif -%}
+
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
