--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,9 @@
 layout: default
 ---
 {{page.title}}
-<p>&nbsp;</p>
 <p>
-  {% assign author = site.authors | where: 'name', page.author | first %}
-  {% if author %}
-    - <a href="{{ author.url }}">{{ author.display_name }}</a>
+  {% if page.author %}
+    <a href="{{ author.url }}">Written by: {{ page.author }}</a>
   {% endif %}
 </p>
 <p>&nbsp;</p>
