--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,16 @@
     {%- include footer.html -%}
 
     </div>
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
