--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>{{ page.display_name }}</h1>
-<h2>{{ page.position }}</h2>
+<h2>Position: {{ page.position }}</h2>
 
 {{ content }}
 
