--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -16,3 +16,6 @@ layout: default
   </li>
   {% endfor %}
 </ul>
+<a href="{{page.instaurl}}"><h2>Follow {{page.display_name}} on Instagram</h2></a>
+
+<a href="{{page.giturl}}"><h2>Follow {{page.display_name}}'s code on GitHub</h2></a>
