--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -27,7 +27,7 @@ h3:before { content: "###";  margin-right: 9px; }
 h4:before { content: "####";  margin-right: 9px; }
 h5:before { content: "#####";  margin-right: 9px; }
 h6:before { content: "######";  margin-right: 9px; }*/
-i{color: var(--text-color);}
+i{color: var(--text-color);font-size:$base-font-size;}
 /**
  * Layout
  */
