--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<style>
+i{font-size:1rem;}
+</style>
 
 <h1>{{ page.display_name }}</h1>
 <h2>Position: {{ page.position }}</h2>
