--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,14 @@
 ---
 layout: default
 ---
-<style>
-img{
-  height=100% ;
-  width=100%;
-}
-</style>
 <p>
 {{page.title}}
   {% assign author = site.authors | where: 'name', page.author | first %}{% if author %}
 Written by : <a href="{{ author.url }}">{{ author.display_name }}</a>{% endif %}
 </p>
+<p>&nbsp;</p>
 {% if page.postimg %}
-<img src='{{page.postimg}}'>
+<img src='{{page.postimg}}' style="max-width: 100%;max-height: 100%;" >
 {% endif %}
 <p>&nbsp;</p>
 {{ content }}
