--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,11 @@
-{%- assign page_paths = site.header_pages | default: default_paths -%}
+{% assign doclist = site.data.header.items | sort: 'name'  %}
 <header>
   <div class="menu">
     <ul>
       <li><a href="{{site.url}}"><div class="webname">{{site.title}}</div></a></li>
-      {%- for path in page_paths -%}
-        {%- assign my_page = site.pages | where: "path", path | first -%}
-        {%- if my_page.title -%}
-        <li class="right"><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
-        {%- endif -%}
-      {%- endfor -%}
+      {% for item in doclist %}
+      <li><a href="{{ item.link | relative_url }}">{{ item.name | escape  }}</a></li>
+    {% endfor %}
     </ul>
   </div>
 </header>
