--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<p>
-{{page.title}}
-  {% assign author = site.authors | where: 'name', page.author | first %}{% if author %}
+<h1 style="font-size:1.2rem;">$ {{page.title}}<h1>
+  <p>{% assign author = site.authors | where: 'name', page.author | first %}{% if author %}
 Written by : <a href="{{ author.url }}">{{ author.display_name }}</a>{% endif %}
 </p>
 <p>&nbsp;</p>
