--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,9 @@ Written by : <a href="{{ author.url }}">{{ author.display_name }}</a>{% endif %}
 Artcile date: {{page.date}}
 <p>&nbsp;</p>
 {% if page.author %}Written by: {{author.display_name}}{% endif %}
-{% if page.comments %}
+
 <div id="disqus_thread"></div>
-{% endif %}
+
 <script>
 
 /**
@@ -25,8 +25,8 @@ Artcile date: {{page.date}}
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = {{page.url}};  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = {{page.title}}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
