--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,20 +15,16 @@ Written by : <a href="{{ author.url }}">{{ author.display_name }}</a>{% endif %}
 Artcile date: {{page.date}}
 <p>&nbsp;</p>
 {% if page.author %}Written by: {{author.display_name}}{% endif %}
-
+<p>&nbsp;</p>
 <div id="disqus_thread"></div>
 
 <script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
 var disqus_config = function () {
 this.page.url = {{page.url}};  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = {{page.title}}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
-*/
+
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = 'https://electron-1.disqus.com/embed.js';
