build v7 added loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
     <div class="container">
 
       {%- include header.html -%}
-
-      <div id="preloader">
-           <strong class="loading">Loading...</strong>
-      </div>
+      <!-- preloader -->
+  <div id="preloader">
+     <div id="name" contenteditable="true">sudo electron</div>
+  </div>
 
     <main>
       {{ content }}
@@ -30,12 +30,32 @@
         });
       }
     </script>
-    <script>
-    var overlay = document.getElementById("preloader");
-window.addEventListener('load', function(){
-overlay.style.display = 'none';
-})
-</script>
     {% include analytics.html %}
+
+     <!-- buffle.js -->
+     <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+
+    <script>
+    //preloader
+
+const iamharsh =  baffle("#name");
+iamharsh.set({
+   characters: '░▒░ ░██░> ████▓ >█> ░/█>█ ██░░ █<▒ ▓██░ ░/░▒',
+         speed: 120
+ });
+
+ iamharsh.start();
+ iamharsh.reveal(4000);
+
+ function loadinganimation(){
+   var overlay = document.getElementById("preloader");
+   window.addEventListener('load', function(){
+   overlay.style.display = 'none';
+   })
+ }
+
+ loadinganimation();
+
+    </script>
   </body>
 </html>
